test/src/e2e_vm_tests/test_programs/should_fail/trait_coherence/impl_self_overlap/src/lib.sw
library;

use impl_self_overlap_lib::MyType;

impl MyType {
    fn do_something(self) {
    }
}
